# mend-rs

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-dev  LICENSE  README.md  container-integration-test.sh  docker-compose.test.yml  docker-compose.yml
migrations/2018-08-13-120226_create_users/: up.sql
migrations/2018-08-18-063743_create_repos/: down.sql  up.sql
migrations/2018-08-23-193549_add_installation_id_to_users/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/auth/: mod.rs
src/backend/: mod.rs
src/backend/static/: 404.html
src/clippy/: mod.rs
src/db/: mod.rs
src/diff/: mod.rs
src/frontend/: configure.rs  index.rs  mod.rs  partials.rs
src/handlers/: create_repos.rs  create_user.rs  mod.rs
src/lint_report/: mod.rs
src/mend_github/: mod.rs
src/models/: mod.rs
src/review_comment/: mod.rs
tests/: docker_compose.rs  github.rs  line_translation.rs
tests/auxiliary/: simple.diff  submit_job.rb  test_private_key
