[package]
name = "mend-rs"
version = "0.1.0"
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = '2018'

[dependencies]
hubcaps = { git = "https://github.com/softprops/hubcaps.git", branch = "master" }
dotenv = "0.9.0"
faktory = "0.10.0"
futures = "0.1.23"
tokio-core = "*"
unidiff = "*"
log = "0.4.0"
env_logger = "0.5.12"
url = "1.7.1"
reqwest = "0.8"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0.70"
sentry = "0.6.0"
tempfile = "3"
zip = "0.4"

[dev-dependencies]
mockito = "0.12.0"
